# financial-advisor

./: BUILD  README.md  deploy.py  deployment.yaml  pyproject.toml  requirements.txt  settings.json
deployment/: deploy.py  test_deployment.py
eval/: test_eval.py
financial_advisor/: __init__.py  agent.py  charting.py  config.py  prompt.py
financial_advisor/prompts/: __init__.py  data_visualization.md  market_analyst.md  root_agent.md
financial_advisor/sub_agents/: __init__.py  data_visualization.py  market_analyst.py
financial_advisor/sub_agents/charting_analyst/: __init__.py  agent.py  prompt.py
financial_advisor/sub_agents/data_analyst/: agent.py  prompt.py
financial_advisor/sub_agents/execution_analyst/: agent.py  prompt.py
financial_advisor/sub_agents/investment_strategist/: agent.py  prompt.py
financial_advisor/sub_agents/market_analyst/: __init__.py  agent.py  prompt.py
financial_advisor/sub_agents/portfolio_analyst/: __init__.py  agent.py  prompt.py
financial_advisor/sub_agents/risk_analyst/: agent.py  prompt.py
financial_advisor/sub_agents/trading_analyst/: agent.py  prompt.py
financial_advisor/tools/: __init__.py  bigquery.py  charting.py  google_search.py
market_analyst/: main.py  prompt.py
tests/: test_agents.py
