[project]
name = "financial-advisor"
version = "0.1"
description = "AI-driven agent designed to facilitate the exploration of the financial advisor landscape"
authors = [{ name = "Antonio Gulli", email = "gulli@google.com" }]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
google-cloud-aiplatform = { version = "^1.108.0", extras = [
    "adk",
    "agent-engines",
] }
python = "^3.9"
google-genai = "^1.29.0"
pydantic = "^2.11.7"
python-dotenv = "^1.0.1"
google-adk = "^1.10.0"
absl-py = "^2.3.1"
google-cloud-bigquery = "^3.35.1"
pandas = "^2.3.1"
google-api-python-client = "^2.179.0"
db-dtypes = "^1.4.3"
matplotlib = "^3.7.2"

[tool.poetry.group.deployment]
optional = true

[tool.poetry.group.deployment.dependencies]
absl-py = "^2.3.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"